[package]
name = "oneshot-reqrep"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=0.2.0-alpha.6", default-features = false, features = ["uds", "codec"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
bytes = "0.4"
futures-util-preview = "0.3.0-alpha.18"

[dev-dependencies]
tokio = { version = "=0.2.0-alpha.6", default-features = false, features = ["uds", "codec", "rt-full"] }
