[package]
name = "oneshot-reqrep"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.2", features = ["uds", "stream", "sync"] }
tokio-util = { version = "0.2", features = ["codec"] }
serde = { version = "1" }
bytes = "0.5"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
serde_cbor = "0.10.1"

[dev-dependencies]
tokio = { version = "0.2.2", features = ["uds", "rt-core", "stream", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
