[package]
name = "oneshot-reqrep"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.13", features = ["uds", "stream", "sync"] }
tokio-util = { version = "0.3.0", features = ["codec"] }
serde = "1.0.104"
bytes = "0.5.4"
futures-util = { version = "0.3.4", default-features = false, features = ["sink"] }
serde_cbor = "0.11.1"

[dev-dependencies]
tokio = { version = "0.2.13", features = ["uds", "rt-core", "stream", "sync", "macros"] }
serde = { version = "1.0.104", features = ["derive"] }
